--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -2,9 +2,7 @@ name: Ruby Gem
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ release ]
 
 jobs:
   build:
